@@ -1,5 +1,6 @@
 Version 1.0.4 (released ??-???-????)
 
+  * fix some markup bugs in query views (issue #266)
 
 Version 1.0.3 (released 13-Oct-2006)
 
